# rust-waveshare-4inch-tft-touch-shield

./: .gdbinit  Cargo.toml  README.md
.cargo/: config
src/: main.rs  spi.rs
src/display/: console.rs  mod.rs  scanline.rs
src/display/ili9486/: command.rs  mod.rs
src/display/xpt2046/: command.rs  mod.rs  read_commands.rs
