[package]
authors = []
categories = ["embedded", "hardware-support", "no-std"]
description = ""
keywords = ["arm", "cortex-m", "stm32", "tft"]
license = "MIT OR Apache-2.0"
name = "tft-touch-shield"
repository = ""
version = "0.0.0"

[dependencies]
nb = "0.1"
panic-semihosting = "0.5"
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
embedded-hal = { version = "0.2", features = ["unproven"] }
stm32f429-hal = { version = "0.1.1", features = ["rt"] }
vga-framebuffer = "0.7"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
